# QuizbotReplit

./: .env.example  .gitignore  .replit  Home.py  Pasted--Road-Map-for-Developing-the-QuizBot-App-in-Python-on-Replit-This-road-map-outlines-the-steps-to-1730318470012.txt  Pasted--ollama-tutorial-Image-by-Author-Running-large-language-models-LLMs-locally-can-be-su-1730668390583.txt  Pasted-To-create-a-more-intuitive-and-user-friendly-chat-interface-similar-to-ChatGPT-s-you-can-instruct-t-1730484845051.txt  Pasted-TypeError-unsupported-operand-type-s-for-float-and-decimal-Decimal-Traceback-File-home-1730651677481.txt  README.md  Roadmap.txt  main.py  pyproject.toml  replit.nix  requirements.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/nix/: env.json
.streamlit/: config.toml
.upm/: store.json
assets/: style.css
database/: analytics.py  models.py  operations.py
pages/: Analytics.py  analytics.py  instructor.py
services/: ollama_service.py  openai_service.py  pdf_service.py
utils/: auth.py
