[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.53.0",
    "pdfplumber>=0.11.4",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "streamlit>=1.39.0",
]
